# palautusrepositorio

./: .gitignore  README.md
viikko2/nhl-reader/: .pylintrc
viikko2/nhl-reader/src/: country.py  index.py  player.py  player_reader.py  player_stats.py  season.py
viikko2/poetry-web/: pyproject.toml
viikko4/maksukortti-mock/src/: kassapaate.py
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko4/verkkokauppa/: pyproject.toml
viikko4/verkkokauppa/src/: kauppa.py
viikko4/verkkokauppa/src/tests/: kauppa_test.py
viikko6/laskin/: .gitignore
viikko6/laskin/src/: kayttoliittyma.py
